Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-31022

Analog Clock Window crashes on startup on Android

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.1.0 RC1
    • 5.1.0 Beta 1
    • QPA
    • None
    • Android
    • 3c50917a6ac1ee7fd4707d69a8ca186343c21f91

    Description

      Start the "Analog Clock Window" example on an Android device. It shuts down on start-up.

      The output in adb logcat seems to indicate that it's crashing when initializing the QPlatformBackingStore:

      I/DEBUG ( 123): 72e76df4 72c8aa69 /data/local/tmp/qt/lib/libQt5Gui.so (QPlatformBackingStore::QPlatformBackingStore(QWindow*)+24)

      Attachments

        For Gerrit Dashboard: QTBUG-31022
        # Subject Branch Project Status CR V

        Activity

          People

            tvete Paul Olav Tvete
            esabraha Eskil Abrahamsen Blomfeldt
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes