Android: Fix crash when using QBackingStore

When making a QBackingStore for a QWindow that was not created yet,
Qt would try to dereference the (null) platform window pointer.

Task-number: QTBUG-31022
Change-Id: I866c71cce9d401ebb598ea4cc91f7cf9bbb30982
Reviewed-by: Samuel Rødal <samuel.rodal@digia.com>
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@digia.com>

cregit: 3c50917a6ac1ee7fd4707d69a8ca186343c21f91 https://github.com/qt/qtbase/commit/3c50917a6ac1ee7fd4707d69a8ca186343c21f91