src/platformsupport/fbconvenience/qfbscreen_p.h
@@ -1,4 +1,5 @@
 DECL|macro|QFBSCREEN_P_H
+DECL|variable|QFbBackingStore
 DECL|variable|QFbCursor
 DECL|variable|QFbWindow
 DECL|variable|QObject
